# Graphy

./: Cargo.toml  README.md
benches/: README.md  graph_benchmarks.rs  threadpool_bench.rs
examples/: stress_test.rs
src/: lib.rs  parallel.rs
src/analysis/: data_flow.rs  exec_flow.rs  mod.rs
src/core/: connection.rs  graph.rs  metadata.rs  mod.rs  node.rs  types.rs
src/generation/: context.rs  mod.rs  strategies.rs
src/utils/: ast_transform.rs  mod.rs  subgraph_expander.rs  variable_gen.rs
tests/: ast_transform.rs  code_generation.rs  common.rs  connection.rs  core_types.rs  data_flow.rs  edge_cases.rs  exec_flow.rs  graph_construction.rs  integration.rs  metadata.rs  node_and_pin.rs  parallel.rs  serialization.rs  variable_gen.rs
