[package]
name = "graphy"
version = "0.1.0"
edition = "2021"
authors = ["Pulsar Team"]
description = "General-purpose graph compilation library for node-based visual programming"
license = "MIT"

[dependencies]
# AST parsing and manipulation
syn = { version = "2.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
quote = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

# Parallelism
rayon = "1.11"

# Fast hashing (non-cryptographic)
rustc-hash = "2.0"

# Stack-allocated vectors for small collections
smallvec = "1.13"

[dev-dependencies]
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

# ====================
# PERFORMANCE PROFILES
# ====================

[profile.release]
# Maximum optimization level
opt-level = 3

# Link-Time Optimization - better cross-crate optimization
lto = "fat"

# Single codegen unit for maximum optimization (slower compile, faster runtime)
codegen-units = 1

# Abort on panic (smaller binary, slightly faster)
panic = "abort"

# Strip debug symbols from binary
strip = true

[profile.bench]
# Inherit release optimizations for benchmarks
inherits = "release"

[[bench]]
name = "graph_benchmarks"
harness = false

[[bench]]
name = "threadpool_bench"
harness = false
